<resources>
    <string name="app_name">Chat-app</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="btnLogin">Login</string>
    <string name="logo">Logo</string>
    <string name="chat_app">Chat-app</string>
    <string name="btnRegister">Register</string>
    <string name="registerLink">Don\'t have an account? Sign up</string>
    <string name="loginLink">Already have an account? Log in</string>
    <string name="verify_password">Verify password</string>
    <string name="profile_pic">Upload profile image</string>
    <string name="profile_picture_view">Profile picture</string>
    <string name="display_name">Display Name</string>
    <string name="contact_image">Contact image</string>
    <string name="settings_button">Settings button</string>
    <string name="enter_message">Enter message</string>
    <string name="send_button">send button</string>
    <string name="active_chat_profile_image">Profile image</string>
    <string name="contact_display_name">Contact display name</string>
    <string name="date_time">Date time</string>
    <string name="last_message">Last message</string>
    <string name="fab_add_contact">Add contact</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="btnAddContact">Add</string>
    <string name="et_add_contact">Write contact name here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_add_contact">ADD CONTACT</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="BaseUrl">https://192.168.1.158:5000/api/</string>
    <string name="theme_title" />
    <string name="theme_header" />
    <string name="profile_header" />
    <string name="server_header" />
    <string name="serverBaseUrl">https://192.168.1.158:5000/api/</string>
</resources>