<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/profile_header">

        <EditTextPreference
            app:key="display_name"
            app:title="@string/display_name"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:key="picture"
            app:title="@string/profile_picture_view" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/theme_header">

        <ListPreference
            app:defaultValue="light"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:key="app_theme"
            app:title="@string/theme_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/server_header">

        <EditTextPreference
            app:key="server_url"
            app:title="@string/BaseUrl"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>
