<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49">

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="text"
            tools:layout_editor_absoluteX="210dp"
            tools:layout_editor_absoluteY="164dp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="139dp"
            tools:layout_editor_absoluteY="301dp" />

        <EditText
            android:id="@+id/etVerifyPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/verify_password"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="139dp"
            tools:layout_editor_absoluteY="401dp" />

        <EditText
            android:id="@+id/etDisplayName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/display_name"
            android:inputType="text"
            tools:layout_editor_absoluteX="210dp"
            tools:layout_editor_absoluteY="164dp" />

        <LinearLayout
            android:id="@+id/linearLayoutImgUpload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/imageViewProfile"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@string/profile_picture_view"
                android:src="@drawable/my_pic" />

            <Button
                android:id="@+id/btnChooseImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#7E2264AD"
                android:layout_marginHorizontal="10dp"
                android:text="@string/profile_pic" />

        </LinearLayout>

        <Button
            android:id="@+id/btnRegister"
            style="@style/Widget.Material3.Button"
            android:textColor="#2264AD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:backgroundTint="#2264AD"
            android:text="@string/btnRegister"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="184dp"
            tools:layout_editor_absoluteY="489dp" />

        <TextView
            android:id="@+id/textViewLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:onClick="onLoginClicked"
            android:text="@string/loginLink"
            android:textColor="@android:color/darker_gray" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/logo"
            android:scaleX="0.7"
            android:scaleY="0.7"
            app:srcCompat="@mipmap/ic_logo_foreground" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/chat_app"
            android:textAllCaps="false"
            android:textSize="34sp"
            android:textStyle="bold|italic" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
