<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="8dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/ivContact"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/contact_image"
        android:src="@drawable/my_pic" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tvDisplayName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/contact_display_name"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDateTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="5dp"
                android:text="@string/date_time"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tvLastMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_message"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>