<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32999998">

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="16dp"
            android:hint="@string/username"
            android:inputType="text"
            tools:layout_editor_absoluteX="210dp"
            tools:layout_editor_absoluteY="164dp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="8dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="139dp"
            tools:layout_editor_absoluteY="301dp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:width="10dp"
            android:height="10dp"

            android:backgroundTint="#2264AD"
            android:text="@string/btnLogin"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            tools:layout_editor_absoluteX="184dp"
            tools:layout_editor_absoluteY="389dp"
            />

        <TextView
            android:id="@+id/textViewSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:onClick="onSignUpClicked"
            android:text="@string/registerLink"
            android:textColor="@android:color/darker_gray" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">



        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/logo"
            android:scaleX="0.7"
            android:scaleY="0.7"
            app:srcCompat="@mipmap/ic_logo_foreground" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/chat_app"
            android:textAllCaps="false"
            android:textSize="34sp"
            android:textStyle="bold|italic" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>